# Mario

./: README.md  SETUP_GUIDE.md  install_mario.bat  install_mario.sh  pyproject.toml  test_api.py  test_input.py
.well-known/: mario-alert.json
src/mario/: __init__.py  __main__.py  alerts.py  api.py  cli.py  config.py  session.py  spinner.py  timing.py  utils.py
src/mario.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
