[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mario"
version = "0.1.0"
description = "Automation client for the modern Tassomai API"
authors = [{name = "Mario"}]
dependencies = []
requires-python = ">=3.9"

[project.scripts]
mario = "mario.cli:main"
