[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mario"
version = "1.0.0"
description = "Automation client for the modern Tassomai API"
authors = [{name = "Afonso Correia", email = "afonso@example.com"}]
dependencies = []
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/afonch/Mario"
Repository = "https://github.com/afonch/Mario"
Issues = "https://github.com/afonch/Mario/issues"

[project.scripts]
mario = "mario.cli:main"
